Fixed the header and changed the Owner-Photo sizes on mobile

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -49,8 +49,6 @@
       display: flex;
       align-items: center;
       margin: 0 auto;
-      max-width: 100%;
-      max-height: 100%;
 
       > img {
         width: 300px;
@@ -107,7 +105,7 @@
   // display: flex;
   // justify-content: center;
   padding: 1rem;
-  
+
 
   &-list {
     list-style: none;
